# FactoryLens

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app_streamlit.py  docker-compose.yml  pyproject.toml
assets/: mvtec_hazelnut_manifest.csv
assets/demo/: README.md  hazelnut_demo_logs.csv
assets/demo/known_issues/: KI-007-print-transfer-mark.md
assets/demo/scenarios/: README.md  vision_scores.csv
assets/eval/: A9_RESULTS.md  README.md  retrieval_gold.json
assets/eval_samples/: HEATMAP_SAMPLES.md  RESULTS.md  RESULTS_PER_TYPE.md  ROBUSTNESS.md  eval_scores.csv  robustness_metrics.csv
assets/known_issues/: INDEX.md  KI-001-crack-drying-stress.md  KI-002-crack-compression.md  KI-003-cut-transfer-contact.md  KI-004-cut-sorter-guide.md  KI-005-hole-insect-void.md  KI-006-hole-impact-chip.md  KI-008-print-dirty-contact.md  KI-009-crack-roller-pressure.md  KI-010-cut-trimming-nick.md  KI-011-hole-shell-weak-spot.md  KI-012-print-packaging-smudge.md
assets/sample_logs/: hazelnut_test_logs.csv
docs/: MVP_SPEC.md  architecture.md
scripts/: README.md  build_memory_bank.py  check_scenarios.py  eval_per_type.py  eval_retrieval.py  eval_retrieval_baseline.py  ingest_known_issues.py  robustness_study.py
src/factorylens/: __init__.py  config.py  main.py  schemas.py  seed.py  storage.py
src/factorylens/agents/: investigation.py
src/factorylens/api/: __init__.py  uploads.py
src/factorylens/data/: __init__.py  known_issues.py  log_generator.py  mvtec_loader.py
src/factorylens/db/: __init__.py  base.py  init_db.py  models.py  session.py
src/factorylens/ingest/: __init__.py  logs.py
src/factorylens/reporting/: pdf.py
src/factorylens/tools/: __init__.py  analyze_image.py  embedder.py  llm.py  query_logs.py  report.py  retrieve_known_issues.py  root_cause.py
tests/: test_agents.py  test_analyze.py  test_analyze_image_defect.py  test_anomaly.py  test_build_memory_bank.py  test_config.py  test_db_models.py  test_defect_type.py  test_eval_baseline.py  test_eval_per_type.py  test_eval_retrieval_a9.py  test_eval_retrieval_baseline.py  test_health.py  test_heatmap.py  test_known_issues.py  test_log_generator.py  test_mvtec_loader.py  test_patchcore_upgrade.py  test_query_logs.py  test_report.py  test_report_pdf.py  test_retrieve_known_issues.py  test_robustness_study.py  test_root_cause.py  test_seed.py  test_uploads_image.py  test_uploads_logs.py
(+15 files in other folders)
