[project]
name = "factorylens"
version = "0.1.0"
description = "AI copilot for industrial visual defect analysis, root-cause investigation, and engineering report generation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "pillow>=10.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
]

# Phase-gated extras. Only install when the matching phase has running code,
# so the tech-stack table in _tracking/TRACKING.md stays honest.
[project.optional-dependencies]
db = ["pgvector>=0.2"]
vision = ["torch", "torchvision", "opencv-python-headless", "numpy"]
agent = ["langchain>=1.0",
    "langchain-openai>=0.3",
    "langgraph>=0.2",
    "openai>=1.0",
    "faiss-cpu"]
reporting = ["markdown>=3.5", "fpdf2>=2.7"]
# A9 retrieval: local embedder (pgvector đã nằm trong extra `db`).
rag = ["sentence-transformers>=2.2"]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/factorylens"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
